--- a/install.txt
+++ b/install.txt
@@ -2,7 +2,7 @@
 
 
 
--(1) Flash bliss recovery on both slots
+(1) Flash bliss recovery on both slots
 
 fastboot flash boot boot.img
 fastboot flash dtbo dtbo.img
@@ -10,12 +10,13 @@ fastboot flash vendor_boot vendor_boot.img
 
 
 (2) Boot into recovery.
-(3) Enter "apply update from ADB"
-(4) Type the following command from your pc
+(3) Install firmware
+(4) Enter "apply update from ADB"
+(5) Type the following command from your pc
 
 adb sideload (rom).zip
 
-(5) Format data from recovery
-(6) Reboot to system 
+(6) Format data from recovery
+(7) Reboot to system 
 
 
